# chessanimate

./: .gitignore  README.md  environment.yml  example.pgn  pyproject.toml
chessanimate/: __main__.py  animate.py
